# cmake_guide

./: Cmake_guide_notes.md  README.md
example_gtest/: CMakeLists.txt
example_gtest/src/: CMakeLists.txt
example_gtest/tests/: CMakeLists.txt  gtest_install.cmake  test1.cpp
